// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decorator-auto-accessors-new-line.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  accessor
  ["bar"];
}

class Foo {
  static accessor
  bar;
}

class Foo {
  accessor
  bar;
}

=====================================output=====================================
class Foo {
  accessor;
  ["bar"];
}

class Foo {
  static accessor;
  bar;
}

class Foo {
  accessor;
  bar;
}

================================================================================
`;

exports[`parenthesized-decorators-call-expression.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@(test().x("global").y())
class X {}

=====================================output=====================================
@(test().x("global").y())
class X {}

================================================================================
`;

exports[`parenthesized-decorators-tagged-template.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Test {
  @(foo\`bar\`)
  text: string = "text"
}

=====================================output=====================================
class Test {
  @(foo\`bar\`)
  text: string = "text";
}

================================================================================
`;
